[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://images/UAVblue.png" type="Texture" id=2]
[ext_resource path="res://default.theme" type="Theme" id=3]
[ext_resource path="res://scripts/TitleBar.gd" type="Script" id=4]
[ext_resource path="res://scripts/Resizer.gd" type="Script" id=5]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 0.481079
margin_top = 44.619
margin_right = 365.481
margin_bottom = 327.619
theme = ExtResource( 3 )
window_title = "File"
resizable = true
access = 2
current_dir = "/Users/Pedro/Desktop/MEAer/UAV/workshop/godot-ws/waypoint_full"
current_path = "/Users/Pedro/Desktop/MEAer/UAV/workshop/godot-ws/waypoint_full/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabsChild" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 51.0
margin_right = -50.0
margin_bottom = -39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBar" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 22.0
mouse_filter = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileButton" type="MenuButton" parent="TitleBar"]
margin_left = 8.0
margin_right = 43.0
margin_bottom = 22.0
text = "File"
flat = false
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Open", null, 0, false, true, 1, 0, null, "", false, "Save", null, 0, false, true, 3, 0, null, "", false ]
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="TitleBar"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -23.0
margin_bottom = 22.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinimizeButton" type="Button" parent="TitleBar"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -46.0
margin_right = -23.0
margin_bottom = 22.0
text = "_"

[node name="Label" type="Label" parent="TitleBar"]
anchor_left = 0.5
anchor_right = 0.5
margin_right = 8.0
margin_bottom = 22.0
grow_horizontal = 2
mouse_default_cursor_shape = 13
text = "Waypoint Editor (Workshop)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResizerPanel" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.0
mouse_filter = 1
mouse_default_cursor_shape = 12
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="Tabs" parent="."]
anchor_right = 1.0
margin_top = 22.0
margin_bottom = -552.0
tab_align = 0
tab_close_display_policy = 2
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="TitleBar" to="TitleBar" method="_on_TitleBar_gui_input"]
[connection signal="pressed" from="TitleBar/CloseButton" to="TitleBar" method="_on_CloseButton_pressed"]
[connection signal="pressed" from="TitleBar/MinimizeButton" to="TitleBar" method="_on_MinimizeButton_pressed"]
[connection signal="gui_input" from="ResizerPanel" to="ResizerPanel" method="_on_ResizerPanel_gui_input"]
[connection signal="tab_changed" from="Tabs" to="." method="_on_Tabs_tab_changed"]
[connection signal="tab_close" from="Tabs" to="." method="_on_Tabs_tab_close"]
